HIVE-2160. Miscellaneous code improvements in the metastore,hwi and ql packages. Contributed by Chinna Rao Lalam
git-svn-id: https://svn.apache.org/repos/asf/hive/trunk@1104096 13f79535-47bb-0310-9956-ffa450edef68